2012-04-05  Nobuhiro Iwamatsu  <iwamatsu@nigauri.org>

	* sysdeps/sh/sh4/fpu/fegetenv.c (fegetenv): Set fpscr register which
	read again.
	* sysdeps/sh/sh4/fpu/ftestexcept.c: Likewise.

2012-04-05  Nobuhiro Iwamatsu  <iwamatsu@nigauri.org>

	* sysdeps/sh/sh4/fpu/fraiseexcpt.c (feraiseexcept): Produce
	an exception using FPU order intentionally.

2012-04-05  Nobuhiro Iwamatsu  <iwamatsu@nigauri.org>

	* sysdeps/sh/sh4/fpu/fedisblxcpt.c: New file.
	* sysdeps/sh/sh4/fpu/feenablxcpt.c: New file.
	* sysdeps/sh/sh4/fpu/fegetexcept.c: New file.
	* sysdeps/sh/sh4/fpu/feupdateenv.c: New file.

2012-04-05  Simon Josefsson  <simon@josefsson.org>

	[BZ #12340]
	* sysdeps/mach/hurd/ttyname_r.c (__ttyname_r): Return ERANGE instead of
	EINVAL when BUFLEN is too smal.

2012-04-05  Thomas Schwinge  <thomas@codesourcery.com>

	[BZ #13553]
	* sysdeps/mach/i386/machine-lock.h: Use volatile instead of __volatile.
	* sysdeps/mach/powerpc/machine-lock.h: Likewise.

2012-04-03  Andreas Jaeger  <aj@suse.de>

	[BZ #13938]
	* manual/setjmp.texi (System V contexts): Fix sentence.

	[BZ #13926]
	* sysdeps/i386/bits/byteswap.h [!__GNUC__](__bswap_constant_64):
	New macro for this case.
	[!__GNUC__] (__bswap_64): New inline function for this case.
	* sysdeps/x86_64/bits/byteswap.h: Likewise.
	* bits/byteswap.h: Likewise.
	* sysdeps/s390/bits/byteswap.h: [!__GNUC__] (__bswap_64): Use
	ull, guard with __GLIBC_HAVE_LONG_LONG.

	* string/endian.h (htobe64,htole64,be64toh,le64toh): Guard with
	__GLIBC_HAVE_LONG_LONG.

	* string/byteswap.h (bswap_64): Guard with __GLIBC_HAVE_LONG_LONG.
	Include <features.h> for __GLIBC_HAVE_LONG_LONG.

2012-04-02 Tulio Magno Quites Machado Filho <tuliom@linux.vnet.ibm.com>

	[BZ #13691]
	* iconvdata/tcvn5712-1.c (FROM_LOOP): Test end of input using
	inptr and inend, rather than using last_ch.

2012-04-02  David S. Miller  <davem@davemloft.net>

	With help from Paul Eggert, Carlos O'Donell, and Roland McGrath.